# hieroglyph

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs  rustfmt.toml
examples/: example.rs
package/: Cargo.toml  main.rs
scripts/: build_fonts.rs
src/: draw.rs  fonts.rs  lib.rs  segments.rs
templates/: fonts.template.rs
