[package]
name = "hieroglyph"
version = "0.1.0"
edition = "2024"
include = ["src", "fonts.tar.zst", "templates"]

[workspace]
members = ["package"]

[dependencies]
resvg = "0.44"
twemoji-assets = "1.3"
unicode-segmentation = "1.12"
cosmic-text = "0.12"

[dev-dependencies]
image = "0.25"

[workspace.dependencies]
zstd = "0.13"
tar = "0.4"
glob = "0.3"
anyhow = "1"
indicatif = "0.17"

[build-dependencies]
anyhow.workspace = true
zstd.workspace = true
tar.workspace = true
